@startuml
class SudokuValidatorService {
   + boolean isSudokuFinished(int[][] gameField)
}

class SudokuValidatorServiceUpdated {
   + boolean isSudokuFullyFilled(int[][] gameField)
}

class PlayDialogService {
   + void startGame()
}

PlayDialogService ..>"Outdated" SudokuValidatorService
PlayDialogService --> SudokuValidatorServiceUpdated
@enduml